Change tmux send-prefix to C-a

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -13,7 +13,8 @@ set -g status-interval 1
 
 # Keybinds
 ## Windows
-bind-key 'C-a' last-window # Double ctrl+a switches to last window
+bind-key 'C-a' send-prefix
+
 ## Panels
 unbind-key '%'
 unbind-key '"'
