--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/vim/bundle/nerdtree"]
 	path = vim/vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vim/vim/bundle/autoclose"]
+	path = vim/vim/bundle/autoclose
+	url = https://github.com/Townk/vim-autoclose.git
