--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,15 @@
 [submodule "vim/vim/bundle/autoclose"]
 	path = vim/vim/bundle/autoclose
 	url = https://github.com/Townk/vim-autoclose.git
+[submodule "vim/vim/bundle/tlib"]
+	path = vim/vim/bundle/tlib
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule "vim/vim/bundle/mw-utils"]
+	path = vim/vim/bundle/mw-utils
+	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
+[submodule "vim/vim/bundle/snipmate"]
+	path = vim/vim/bundle/snipmate
+	url = https://github.com/garbas/vim-snipmate.git
+[submodule "vim/vim/bundle/snippets"]
+	path = vim/vim/bundle/snippets
+	url = https://github.com/honza/vim-snippets.git
