[tmux] Allow passing modifier keys to nested clients

--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -11,6 +11,9 @@ set -g visual-activity on   #  notifications
 setw -g automatic-rename    # Automatically set window title
 set -g status-interval 1
 
+# Allow passing modifier keys to nested clients
+set-window-option -g xterm-keys on
+
 # Keybinds
 ## Windows
 bind-key 'C-a' send-prefix
