--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/vim/bundle/less"]
 	path = vim/vim/bundle/less
 	url = https://github.com/groenewege/vim-less.git
+[submodule "vim/vim/bundle/solarized"]
+	path = vim/vim/bundle/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
