--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/vim/bundle/solarized"]
 	path = vim/vim/bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "vim/vim/bundle/stylus"]
+	path = vim/vim/bundle/stylus
+	url = https://github.com/wavded/vim-stylus.git
