--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/vim/bundle/stylus"]
 	path = vim/vim/bundle/stylus
 	url = https://github.com/wavded/vim-stylus.git
+[submodule "vim/vim/bundle/undotree"]
+	path = vim/vim/bundle/undotree
+	url = https://github.com/mbbill/undotree.git
