--- a/i3/i3/config
+++ b/i3/i3/config
@@ -147,11 +147,11 @@
     # Media {{{2
     # -----
         # Volume raise/lower
-        bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pactl stat | grep 'Default Sink' | cut -d' ' -f3) +5%
-        bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pactl stat | grep 'Default Sink' | cut -d' ' -f3) -- -5%
+        bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.i3/utils/sound.sh volume-up
+        bindsym XF86AudioLowerVolume exec --no-startup-id ~/.i3/utils/sound.sh volume-down
 
-        # Toggle sound
-        bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pactl stat | grep 'Default Sink' | cut -d' ' -f3) toggle
+        # Toggle mute
+        bindsym XF86AudioMute exec --no-startup-id ~/.i3/utils/sound.sh toggle-mute
 
     # }}}
 
