Start compton at startup

--- a/i3/i3/config
+++ b/i3/i3/config
@@ -13,6 +13,8 @@
 # =============================================================================
 # Startup {{{1
 # =============================================================================
+    # compositor
+    exec --no-startup-id compton
 
 # General Options {{{1
 # =============================================================================
